# VLN

./: README.md  cmd_list.txt  display.py  pytorch.py  test.py  vln_orb.py
pictures/: Presentation1.pptx
ros/workspace/: =4.10.0
ros/workspace/.catkin_tools/profiles/default/: build.yaml
ros/workspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
ros/workspace/devel/.private/VLN_planner/: local_setup.sh  setup.sh
ros/workspace/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  setup.fish  setup.sh
ros/workspace/devel/.private/vln_planner/: .catkin  local_setup.sh
ros/workspace/devel/.private/yolo_detection_package/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  setup.fish  setup.sh
ros/workspace/devel/include/VLN_planner/: ObjectCoordinate.h  ObjectCoordinates.h  ObjectDetection.h  ObjectDetections.h
ros/workspace/devel/include/vln_planner/: ObjectCoordinate.h  ObjectCoordinates.h  ObjectDetection.h  ObjectDetections.h
ros/workspace/devel/include/yolo_detection_package/: ObjectCoordinate.h  ObjectCoordinates.h  ObjectDetection.h  ObjectDetections.h
ros/workspace/devel/lib/VLN_planner/: a_star_planner_node  vln_goal.py  yolo_detection_node.py
ros/workspace/devel/lib/pkgconfig/: VLN_planner.pc  catkin_tools_prebuild.pc  vln_planner.pc  yolo_detection_package.pc
ros/workspace/devel/lib/vln_planner/: a_star_planner_node  object_marker.py  vln_goal.py  yolo_detection_node.py
ros/workspace/devel/lib/yolo_detection_package/: vln_goal.py  yolo_detection_node.py
ros/workspace/logs/VLN_planner/: build.check.006.log.stderr  build.check.010.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr
ros/workspace/logs/yolo_detection_package/: build.cmake.000.log.stderr
ros/workspace/src/VLN_planner/: CMakeLists.txt
ros/workspace/src/VLN_planner/launch/: yolo_detection.launch
ros/workspace/src/VLN_planner/msg/: ObjectDetection.msg  ObjectDetections.msg
ros/workspace/src/vln_planner/: CMakeLists.txt
ros/workspace/src/vln_planner/config/: yolo_detection.rviz
ros/workspace/src/vln_planner/launch/: default.rviz  rviz.launch  vln_run.launch
ros/workspace/src/vln_planner/scripts/: vln_goal.py  yolo_detection_node.py
ros/workspace/src/vln_planner/src/: a_star_planner.cpp
ros/workspace/src/yolo_detection_package/: CMakeLists.txt  package.xml
ros/workspace/src/yolo_detection_package/launch/: yolo_detection.launch
ros/workspace/src/yolo_detection_package/msg/: ObjectCoordinate.msg  ObjectCoordinates.msg
ros/workspace/src/yolo_detection_package/scripts/: vln_goal.py  yolo_detection_node.py
(+193 files in other folders)
